Fix: Replace Stream.collect(Collectors.toList()) with Stream.toList() based on SonarQube feedback